--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,93 @@
-.navbar-main{
+.navbar-main {
   display: flex;
-  width: 100%;
+  width: 95%;
   justify-content: space-around;
   padding: 18px;
+  background-color: white;
+  max-width: 1280px;
+  margin: 0 auto;
+  
 }
-.searchparent{
+#cal-pt{
+  position: relative;
+}
+#cal-pt>h2{
+  position: absolute;
+  top: -16px;
+  left: 27px;
+  font-size: 11px;
+  background-color: red;
+  border-radius: 50%;
+  color: white;
+  padding: 2px 5px;
+}
+.searchparent {
   border-radius: 30px;
-  border :1px solid black;
-  width: 80%;
+  border: 1px solid black;
+  width: 55%;
   display: flex;
   justify-content: space-between;
-  height: 50px;
+  height: 45px;
   align-items: center;
 }
-.searchparent input{
-  width: 82%;
-  border:none;
+
+.searchparent input {
+  width: 100%;
+  border: none;
   outline: none;
 }
-.search-cat{
+.search-cat {
   height: 28px;
-    border-left: 1px solid black;
-    margin: 0px;
-    padding: 12px;
-    width: 110px;
-    color: gray;
+  border-left: 1px solid black;
+  margin: 0px;
+  padding: 9px;
+  width: 110px;
+  color: gray;
+  
 }
-.nav-icons-main{
+.nav-icons-main {
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 10%;
   height: 50px;
-  
 }
-.nav-icon{
-  background-color: #F3F5F9;
+.nav-icon {
+  background-color: #f3f5f9;
   /* width: 30px;
   height: 30px; */
   border-radius: 50%;
   padding: 14px;
   text-align: center;
-  
 }
-.search-icons{
+.search-icons {
   padding: 12px;
+  display: flex;
+  width: 80%;
 }
-.bazarheading{
+.bazarheading {
   margin: 0px;
   color: #0d3685;
 }
 
-.navbar-main2{
+.navbar-main2 {
   display: flex;
   justify-content: space-between;
   box-shadow: 0px 14px 18px #80808024;
+  background-color: white;
+  max-width: 1280px;
+  margin: 0 auto;
 }
-.navbar-main2 ul{
-display: flex;
-justify-content: space-around;
-width: 530px;
-list-style: none;
-color: gray;
+.navbar-main2 ul {
+  display: flex;
+  justify-content: space-around;
+  width: 530px;
+  list-style: none;
+  color: gray;
 }
-.nav-cat{
-  background-color: rgb(243, 243, 243);
+.nav-cat {
   width: 300px;
+  background-color: #f6f9fc;
   /* padding-left: 30px; */
   margin-left: 30px;
   display: flex;
@@ -73,17 +95,20 @@ color: gray;
   align-items: center;
   padding-left: 10px;
   height: 38px;
-    margin-top: 5px;
+  margin-top: 5px;
 }
-.nav-cat p{
+.nav-cat p {
   margin: 0px;
-margin-left: 10px;
-color: gray;
+  margin-left: 10px;
+  color: gray;
 }
-.Carousel-main{
+.Carousel-main {
   display: flex;
   justify-content: space-evenly;
   height: 600px;
+  background-color: white;
+  max-width: 1280px;
+  margin: 0 auto;
 }
 .Carousel-img-pt {
   width: 30%;
@@ -91,84 +116,167 @@ color: gray;
   /* flex-direction: column; */
   align-items: center;
 }
-.Carousel-img-pt img{
+.Carousel-img-pt img {
   height: 400px;
+  width: 100%;
 }
-.Carousel-heading{
+.Carousel-heading {
   display: flex;
   flex-direction: column;
   align-items: center;
-width: 30%;
-justify-content: center;
+  width: 30%;
+  justify-content: center;
 }
-.Carousel-btn-pt{
-  width:100%;
+.Carousel-heading>h1{
+  font-size: 45px;
 }
-.Carousel-btn-pt button{
-  background: #D23F57;
-    border-radius: 12px;
-    padding: 15px 32px;
-    color: white;
-   border: none;
+.Carousel-btn-pt {
+  width: 100%;
 }
-.deal-item-main{
+.Carousel-btn-pt button {
+  background: #d23f57;
+  border-radius: 12px;
+  padding: 0px 32px;
+  color: white;
+  border: none;
+}
+.deal-item-main {
   /* display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   /* grid-template-columns: 1fr fit-content(30%); */
   /* grid-template-columns: repeat(4 ,1fr);
   grid-template-columns: 1fr 1fr 1fr 1fr;  */
   display: flex;
-  overflow-x: auto;
+  max-width: 1280px;
+  margin: 0 auto;
   justify-content: space-around;
+  background-color: #f6f9fc;
 }
-.deals-items-img{
-  height: 300px;
-  /* width: 100%; */
+.deals-items-img {
+  width: 100%;
 }
-.deal-item-main{
-  background-color: #F6F9FC
-}
-.deals-item-childs{
+
+.deals-item-childs {
   border-radius: 12px;
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  margin: 12px;
+  transition: all 0.6s;
 }
-.deals-item-childs h4{
+.deals-item-childs:hover {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.deals-item-childs p{
+  color: white;
+    /* background-color: red; */
+    border-radius: 20px;
+    padding: 5px 15px;
+    margin: 10px;
+    font-size: 13px;
+    background: #d23f57;
+    width: fit-content;
+}
+.deals-item-childs h4 {
   color: gray;
   padding-left: 12px;
+  margin: 6px;
 }
-.plus-btn-main h3{
+.deal-arrow-pt{
+  position: absolute;
+    width: 82%;
+    display: flex;
+    justify-content: space-between;
+    /* margin: 0px 0px 0px 78px; */
+    top: 300px;
+    margin: 0px 138px!important;
+}
+.stars{
+  padding-left: 15px;
+}
+.stars p{
+  display: inline-block;
+}
+.plus-btn-main h3 {
   color: red;
   padding-left: 12px;
 }
-.plus-btn-main{
+.plus-btn-main {
   display: flex;
   justify-content: space-between;
   padding: 0px 16px 0px 12px;
-  
 }
-.plus-btn-main button{
+.plus-btn-main button {
   border: 1px solid red;
   color: red;
-  height: 26px;
+  height: 36px;
   background-color: white;
   margin-top: 12p;
   margin-top: 16px;
+  font-weight: bolder;
+  padding: 11px 8px;
   border-radius: 6px;
 }
 
-
-.deals-heading{
+.deals-heading {
   display: flex;
-  background-color: #F6F9FC;
-  
+  background-color: #f6f9fc;
+  max-width: 1280px;
+  margin: 0 auto;
   justify-content: space-between;
 }
-.deals-heading h1{
-padding-left: 20px;
+.deals-heading h1 {
+  padding-left: 20px;
 }
-.deals-heading p{
-padding-top: 20px;
-padding-right: 20px;
+.deals-heading p {
+  padding-top: 20px;
+  padding-right: 20px;
+}
+.top-cat-main {
+  /* display: flex;
+  justify-content: space-around;
+  background-color: #f6f9fc; */
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
+  max-width: 1280px;
+  place-content: center;
+  margin: 0 auto;
+  overflow-x: auto;
+}
+.top-items-childs {
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  display: flex;
+  position: relative;
+  padding: 6px;
+  margin: 12px;
+}
+.top-img-pt:hover {
+ background: rgba(0, 0, 0, 0.2); 
+}
 
+.top-items-childs img {
+  box-shadow: 0px 0px 1px gray;
+  height: 130px;
+  width: 33.3333%;
+}
+.top-items-title-pt {
+  display: flex;
+  justify-content: space-around;
+  position: absolute;
+  width: 100%;
+  /* padding: 0px 20px 0px 20px; */
+}
+.top-img-pt{
+  border-radius: 4px;
+}
+.top-items-title-pt h5 {
+  background-color: #0d3685;
+  border-radius: 30px;
+  padding: 4px 12px;
+}
+.top-items-title-pt h6 {
+  background-color: rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  padding: 4px 12px;
 }
